Removed webkit-overflow-scrolling due to bug in Android

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -168,7 +168,6 @@ pre {
   font-family: $codeFont;
   overflow: auto;
   white-space: pre;
-  -webkit-overflow-scrolling: touch;
 }
 
 .highlight, .cli-code {
@@ -189,8 +188,7 @@ textarea {
 .cli-code {
   width: 100%;
   white-space: nowrap;
-  overflow-y: hidden;
-  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
   padding: 23px;
   line-height: 34px;
   font-family: monospace;
